network/NetworkPolicies/8/solution/policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-8-frontend
  namespace: np-8-frontend
spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: np-8-backend
      podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 8080
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-8-backend
  namespace: np-8-backend
spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: np-8-db
      podSelector:
        matchLabels:
          app: db
    ports:
      - protocol: TCP
        port: 5432

  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-8-db
  namespace: np-8-db
spec:
  podSelector:
    matchLabels:
      app: db

  policyTypes:
  - Egress
